<resources>
    <string name="app_name">RetroDownload</string>
    <string name="start_1">Start 1</string>
    <string name="hint_1">未开始</string>
    <string name="pause_1">Pause 1</string>
    <string name="pause_2">Pause 2</string>
    <string name="start_2">Start 2</string>
    <string name="resume_1">Resume 1</string>
    <string name="cancel_1">Cancel 1</string>
    <string name="resume_2">Resume 2</string>
    <string name="cancel_2">Cancel 2</string>
    <string name="delete_1">Delete 1</string>
    <string name="delete_2">Delete 2</string>
    <string name="show_state_1">Show State 1</string>
    <string name="show_state_2">Show State 2</string>
</resources>
