<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/percent_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/hint_1" />

        <TextView
            android:id="@+id/start_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#cccccccc"
            android:padding="10dp"
            android:text="@string/start_1" />

        <TextView
            android:id="@+id/pause_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#cccccccc"
            android:padding="10dp"
            android:text="@string/pause_1" />

        <TextView
            android:id="@+id/resume_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#cccccccc"
            android:padding="10dp"
            android:text="@string/resume_1" />

        <TextView
            android:id="@+id/cancel_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#cccccccc"
            android:padding="10dp"
            android:text="@string/cancel_1" />

        <TextView
            android:id="@+id/delete_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#cccccccc"
            android:padding="10dp"
            android:text="@string/delete_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/percent_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/hint_1" />

        <TextView
            android:id="@+id/start_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#cccccccc"
            android:padding="10dp"
            android:text="@string/start_2" />

        <TextView
            android:id="@+id/pause_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#cccccccc"
            android:padding="10dp"
            android:text="@string/pause_2" />

        <TextView
            android:id="@+id/resume_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#cccccccc"
            android:padding="10dp"
            android:text="@string/resume_2" />

        <TextView
            android:id="@+id/cancel_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#cccccccc"
            android:padding="10dp"
            android:text="@string/cancel_2" />

        <TextView
            android:id="@+id/delete_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#cccccccc"
            android:padding="10dp"
            android:text="@string/delete_2" />
    </LinearLayout>
</LinearLayout>
